article main flex megvan nav flex hátra

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                     placeat iure officiis vitae. Consectetur dolore nulla atque libero neque dolorum ullam magnam veniam
                     provident odit.</p>
             </section>
+            <section>
             <h2>Cikk 2</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus nobis cupiditate velit cum
                 facere quo impedit iusto nisi itaque quia mollitia vitae aliquid sit, dicta quis neque iste corporis
@@ -53,6 +54,7 @@
                 deleniti minus cupiditate maxime esse possimus officiis, non ab ipsum ad est labore qui? Corporis
                 pariatur beatae numquam odit!</p>
             </section>
+            <section>
             <h2>Cikk 3</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus nobis cupiditate velit cum
                 facere quo impedit iusto nisi itaque quia mollitia vitae aliquid sit, dicta quis neque iste corporis
@@ -68,6 +70,7 @@
                 debitis incidunt, delectus quibusdam perspiciatis excepturi! Et consectetur repellat dignissimos.
                 Vitae exercitationem qui laboriosam sint.</p>
             </section>
+            <section>
             <h2>Cikk 4</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus nobis cupiditate velit cum
                     facere quo impedit iusto nisi itaque quia mollitia vitae aliquid sit, dicta quis neque iste corporis
@@ -84,11 +87,13 @@
                     placeat iure officiis vitae. Consectetur dolore nulla atque libero neque dolorum ullam magnam veniam
                     provident odit.</p>
             </section>
+            <section>
             <h2>Cikk 5</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus nobis cupiditate velit cum
                     facere quo impedit iusto nisi itaque quia mollitia vitae aliquid sit, dicta quis neque iste corporis
                     explicabo.</p>                
             </section>
+            <section>
             <h2>Cikk 6</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus nobis cupiditate velit cum
                     facere quo impedit iusto nisi itaque quia mollitia vitae aliquid sit, dicta quis neque iste corporis
@@ -99,17 +104,14 @@
                     deleniti minus cupiditate maxime esse possimus officiis, non ab ipsum ad est labore qui? Corporis
                     pariatur beatae numquam odit!</p>                
             </section>
-        </article>
-        <aside>
+        </article>        
+        <footer>
             <ul>
                 <li><a href="index.html">Kezdőlap</a></li>
                 <li><a href="#">Menü1</a></li>
                 <li><a href="#">Menü2</a></li>
                 <li><a href="#">Menü3</a></li>
             </ul>
-        </aside>
-        <footer>
-            <p>Dreilinger Vanessza Maja</p>
         </footer>
     </main>
 
