--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
             <h1>Flexbox</h1>
         </header>
         <nav>
-            <ul>
+            <ul class="elso">
                 <li><a href="index.html">Kezdőlap</a></li>
+            </ul>
+            <ul class="masodik">                
                 <li><a href="#">Menü1</a></li>
                 <li><a href="#">Menü2</a></li>
                 <li><a href="#">Menü3</a></li>
